tests/type_param_bounds/type_param_bounds.exp
Error ------------------------------------------------ type_param_bounds.js:4:10

Cannot instantiate `X` because in type argument `T`, string is incompatible with
number.

Error: type_param_bounds.js:4
  4: (true: X<string>);
              ^^^^^^ Cannot instantiate `X` because in type argument `T`, string [1] is incompatible with number [2].
  References:
    4: (true: X<string>);
                ^^^^^^ [1]: string
    3: type X<T: number> = bool;
                 ^^^^^^ [2]: number


Found 1 error
